--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,6 @@
 *{
     margin: 0px;
     padding: 0px;
-    color: white;
 }
 .logo-span{
     color: Blue;
@@ -108,6 +107,12 @@
 .author-profile img{
     margin-left: -10;
 }
+.service-left-container{
+    color: white;
+}
+.service-left-container > h1{
+    margin-top: 20px;
+}
 
 .service-left-container span{
     color: orangered;
@@ -127,9 +132,43 @@
     width:50%;
     margin-bottom: 20px;
 }
-.author-decription{
+.author-description{
     margin-left: 20px;
     width: 150px;
     border-right: 1px solid red;
     margin-right: 20px;
+}
+
+/* service section right starts */
+.icon{
+    width: 70px;
+    margin-bottom: 20px;
+}
+
+.box{
+    width: 150px;
+    height: 150px;
+    padding: 50px;
+    background-color: white;
+    color: black;
+    text-align: center;
+    border-radius: 7px;
+}
+.skillset-1, .skillset-2{
+    display: flex;
+    margin: 5px;
+    gap: 5px;
+}
+/* ends */
+
+.service-contact-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+}
+
+.service-contact-container-phone{
+    display: flex;
+
 }
